<resources>
    <string name="app_name">CryptoApplication</string>
    <string name="symbols_template">%s / %s</string>
    <string name="last_update_template">Время последнего обновления: %s</string>
    <string name="slash">/</string>
    <string name="price_label">Цена: </string>
    <string name="price">7352.2 </string>
    <string name="market">Bittlinex </string>
    <string name="time">21:05:15 </string>
    <string name="min_day_price_label">Минимум за день: </string>
    <string name="max_day_price_label">Максимум за день: </string>
    <string name="last_market_label">Последняя сделка: </string>
    <string name="last_update_label">Обновлено: </string>
</resources>